name:                hamlib
version:             0.1.0.0
synopsis:            Hamlib bindings for Haskell
description:         Haskell FFI bindings for hamlib
homepage:            https://github.com/CodeBlock/hamlib-haskell
license:             LGPL-2.1
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Communication
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Communication.Hamlib.Rig
                     , Communication.Hamlib.RigList
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5
                     , c2hs
  build-tools:         c2hs
  Extra-libraries:     hamlib
  hs-source-dirs:      src
  default-language:    Haskell2010
